test/corpus/number-expressions.txt
============
simple binary_expression with minus and spaces
============

(ok - 1)

---
(source_file
    (group_literal 
        expression: (binary_expression 
            (identifier)
            (int_literal))))

============
simple binary_expression with minus, without spaces
============

(ok-1)

---
(source_file
    (group_literal 
        expression: (binary_expression 
            (identifier)
            (int_literal))))

============
simple binary_expression with plus, without spaces
============

(ok-1)

---
(source_file
    (group_literal 
        expression: (binary_expression 
            (identifier)
            (int_literal))))

============
simple binary_expression with plus and spaces
============

(ok - 1)

---
(source_file
    (group_literal 
        expression: (binary_expression 
            (identifier)
            (int_literal))))

============
binary_expression prefix minus group
============

(ok + -(1))

---
(source_file
    (group_literal 
        expression: (binary_expression 
            (identifier)
            (unary_expression
                (group_literal
                expression: (int_literal))))))
