test/corpus/precedence.txt
============
Multiplication has higher precedence than addition
============

a * 2 + 1

---
(source_file
    (binary_expression
        (binary_expression
            (identifier)
            (int_literal))
        (int_literal)
        ))

============
Multiplication has higher precedence than addition (negative sign)
============

a * 2 + -1

---
(source_file
    (binary_expression
        (binary_expression
            (identifier)
            (int_literal))
        (int_literal)
        ))
